# shotgrid-mcp-server

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  API_COVERAGE_ANALYSIS.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  FEATURE_ASGI_SUMMARY.md  README.md  README_zh.md  app.py  copy_schema.py  docker-compose.yml  fastmcp_entry.py  justfile  mypy.ini  noxfile.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  test_http_request.py  vx.toml
docs/: CACHING_STRATEGY.md  DEVELOPMENT.md  QUICKSTART.md  README.md  configuration-examples.mdx  configuration.mdx  deployment.md  deployment_zh.md  docs.json  index.md  index.mdx  installation.mdx  introduction.mdx  lazy_initialization.md  mint.json  mintlify.config.js  package-lock.json  package.json
docs-vitepress/: package.json
examples/: custom_app.py
nox_actions/: codetest.py  docs.py  lint.py  release.py
scripts/: copy_schema_files.py
tests/: conftest.py  helpers.py  test_api_client.py  test_api_models.py  test_api_models_filters.py  test_api_tools.py  test_asgi.py  test_batch_operations.py  test_cli.py  test_data_types.py  test_entity_normalization.py  test_error_handler.py  test_factory.py  test_filter_processing.py  test_filters.py  test_helper_types.py  test_http_context.py  test_mockgun_ext.py  test_mockgun_ext_additional.py  test_note_tools.py  test_optimized_queries.py  test_optimized_queries_mock.py  test_playlist_tools.py  test_response_models.py  test_schema_cache.py  test_schema_resources.py  test_schema_validator.py  test_search_tools.py  test_server.py  (+6 more)
(+135 files in other folders)
