[project]
name = "shotgrid-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server implementation using fastmcp"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "fastmcp>=0.4.1",
    "mcp>=1.2.0",
    "shotgun-api3",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "platformdirs>=2.5.4",
    "aiohttp>=3.9.0",
    "requests>=2.32.3",
    "six>=1.16.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shotgrid_mcp_server"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.uv.sources]
shotgun-api3 = { git = "https://github.com/shotgunsoftware/python-api", tag = "v3.7.0" }
